Added sheep, allay, vex, piglin brute and zombified piglin heads