@@ -20,10 +20,13 @@ public class ModWallSkullBlock extends AbstractModSkullBlock {
     public static final DirectionProperty FACING;
     private static final Map<Direction, VoxelShape> FACING_TO_SHAPE;
     private static final Map<Direction, VoxelShape> FACING_TO_VILLAGER_SHAPE;
+    private static final Map<Direction, VoxelShape> FACING_TO_SHEEP_SHAPE;
+    private static final Map<Direction, VoxelShape> FACING_TO_ALLAY_SHAPE;
+    private static final Map<Direction, VoxelShape> FACING_TO_PIGLIN_SHAPE;
 
     public ModWallSkullBlock(ModSkullBlock.SkullType skullType, AbstractBlock.Settings settings) {
         super(skullType, settings);
-        this.setDefaultState((BlockState)((BlockState)this.stateManager.getDefaultState()).with(FACING, Direction.NORTH));
+        this.setDefaultState((this.stateManager.getDefaultState()).with(FACING, Direction.NORTH));
     }
 
     public String getTranslationKey() {
@@ -31,10 +34,39 @@ public class ModWallSkullBlock extends AbstractModSkullBlock {
     }
 
     public VoxelShape getOutlineShape(BlockState state, BlockView world, BlockPos pos, ShapeContext context) {
-        if (this.getSkullType() == ModSkullBlock.Type.VILLAGER || this.getSkullType() == ModSkullBlock.Type.EVOKER || this.getSkullType() == ModSkullBlock.Type.VINDICATOR || this.getSkullType() == ModSkullBlock.Type.PILLAGER) {
-            return (VoxelShape)FACING_TO_VILLAGER_SHAPE.get(state.get(FACING));
+        if (this.getSkullType() == ModSkullBlock.Type.VILLAGER
+                || this.getSkullType() == ModSkullBlock.Type.EVOKER
+                || this.getSkullType() == ModSkullBlock.Type.VINDICATOR
+                || this.getSkullType() == ModSkullBlock.Type.PILLAGER
+                || this.getSkullType() == ModSkullBlock.Type.ZOMBIE_VILLAGER
+                || this.getSkullType() == ModSkullBlock.Type.ILLUSIONER) {
+            return FACING_TO_VILLAGER_SHAPE.get(state.get(FACING));
+        } else if (this.getSkullType() == ModSkullBlock.Type.SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.WHITE_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.ORANGE_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.MAGENTA_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.LIGHT_BLUE_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.YELLOW_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.LIME_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.PINK_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.GRAY_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.LIGHT_GRAY_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.CYAN_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.PURPLE_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.BLUE_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.BROWN_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.GREEN_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.RED_SHEEP
+                || this.getSkullType() == ModSkullBlock.Type.BLACK_SHEEP) {
+            return FACING_TO_SHEEP_SHAPE.get(state.get(FACING));
+        } else if (this.getSkullType() == ModSkullBlock.Type.ALLAY
+                || this.getSkullType() == ModSkullBlock.Type.VEX) {
+            return FACING_TO_ALLAY_SHAPE.get(state.get(FACING));
+        } else if (this.getSkullType() == ModSkullBlock.Type.PIGLIN_BRUTE
+                || this.getSkullType() == ModSkullBlock.Type.ZOMBIFIED_PIGLIN) {
+            return FACING_TO_PIGLIN_SHAPE.get(state.get(FACING));
         } else {
-            return (VoxelShape)FACING_TO_SHAPE.get(state.get(FACING));
+            return FACING_TO_SHAPE.get(state.get(FACING));
         }
     }
 
@@ -50,7 +82,7 @@ public class ModWallSkullBlock extends AbstractModSkullBlock {
             Direction direction = var6[var8];
             if (direction.getAxis().isHorizontal()) {
                 Direction direction2 = direction.getOpposite();
-                blockState = (BlockState)blockState.with(FACING, direction2);
+                blockState = blockState.with(FACING, direction2);
                 if (!blockView.getBlockState(blockPos.offset(direction)).canReplace(ctx)) {
                     return blockState;
                 }
@@ -61,11 +93,11 @@ public class ModWallSkullBlock extends AbstractModSkullBlock {
     }
 
     public BlockState rotate(BlockState state, BlockRotation rotation) {
-        return (BlockState)state.with(FACING, rotation.rotate((Direction)state.get(FACING)));
+        return state.with(FACING, rotation.rotate(state.get(FACING)));
     }
 
     public BlockState mirror(BlockState state, BlockMirror mirror) {
-        return state.rotate(mirror.getRotation((Direction)state.get(FACING)));
+        return state.rotate(mirror.getRotation(state.get(FACING)));
     }
 
     protected void appendProperties(StateManager.Builder<Block, BlockState> builder) {
@@ -75,6 +107,9 @@ public class ModWallSkullBlock extends AbstractModSkullBlock {
     static {
         FACING = HorizontalFacingBlock.FACING;
         FACING_TO_SHAPE = Maps.newEnumMap(ImmutableMap.of(Direction.NORTH, Block.createCuboidShape(4.0, 4.0, 8.0, 12.0, 12.0, 16.0), Direction.SOUTH, Block.createCuboidShape(4.0, 4.0, 0.0, 12.0, 12.0, 8.0), Direction.EAST, Block.createCuboidShape(0.0, 4.0, 4.0, 8.0, 12.0, 12.0), Direction.WEST, Block.createCuboidShape(8.0, 4.0, 4.0, 16.0, 12.0, 12.0)));
-        FACING_TO_VILLAGER_SHAPE = Maps.newEnumMap(ImmutableMap.of(Direction.NORTH, Block.createCuboidShape(4.0, 4.0, 8.0, 12.0, 14.0, 16.0), Direction.SOUTH, Block.createCuboidShape(4.0, 4.0, 0.0, 12.0, 14.0, 8.0), Direction.EAST, Block.createCuboidShape(0.0, 4.0, 4.0, 8.0, 14.0, 12.0), Direction.WEST, Block.createCuboidShape(8.0, 4.0, 4.0, 16.0, 14.0, 12.0)));
+        FACING_TO_VILLAGER_SHAPE = Maps.immutableEnumMap(Map.of(Direction.NORTH, Block.createCuboidShape(4.0, 4.0, 8.0, 12.0, 14.0, 16.0), Direction.SOUTH, Block.createCuboidShape(4.0, 4.0, 0.0, 12.0, 14.0, 8.0), Direction.EAST, Block.createCuboidShape(0.0, 4.0, 4.0, 8.0, 14.0, 12.0), Direction.WEST, Block.createCuboidShape(8.0, 4.0, 4.0, 16.0, 14.0, 12.0)));
+        FACING_TO_SHEEP_SHAPE = Maps.immutableEnumMap(Map.of(Direction.NORTH, Block.createCuboidShape(5.0, 5.0, 8.0, 11.0, 11.0, 16.0), Direction.SOUTH, Block.createCuboidShape(5.0, 5.0, 0.0, 11.0, 11.0, 8.0), Direction.EAST, Block.createCuboidShape(0.0, 5.0, 5.0, 8.0, 11.0, 11.0), Direction.WEST, Block.createCuboidShape(8.0, 5.0, 5.0, 16.0, 11.0, 11.0)));
+        FACING_TO_ALLAY_SHAPE = Maps.immutableEnumMap(Map.of(Direction.NORTH, Block.createCuboidShape(5.5, 5.5, 11.0, 10.5, 10.5, 16.0), Direction.SOUTH, Block.createCuboidShape(5.5, 5.5, 0.0, 10.5, 10.5, 5.0), Direction.EAST, Block.createCuboidShape(0.0, 5.5, 5.5, 5.0, 10.5, 10.5), Direction.WEST, Block.createCuboidShape(11.0, 5.5, 5.5, 16.0, 10.5, 10.5)));
+        FACING_TO_PIGLIN_SHAPE = Maps.immutableEnumMap(Map.of(Direction.NORTH, Block.createCuboidShape(3.0, 4.0, 8.0, 13.0, 12.0, 16.0), Direction.SOUTH, Block.createCuboidShape(3.0, 4.0, 0.0, 13.0, 12.0, 8.0), Direction.EAST, Block.createCuboidShape(0.0, 4.0, 3.0, 8.0, 12.0, 13.0), Direction.WEST, Block.createCuboidShape(8.0, 4.0, 3.0, 16.0, 12.0, 13.0)));
     }
 }
